<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playerBet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackjack_table_bg"
    tools:context=".GameActivity">
    <!--  Dealer  -->
    <LinearLayout
        android:id="@+id/dealer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/dealerCard1"
            android:layout_width="70dp"
            android:layout_height="100dp" />

        <ImageView
            android:id="@+id/dealerCard2"
            android:layout_width="70dp"
            android:layout_height="100dp" />

        <ImageView
            android:id="@+id/dealerCard3"
            android:layout_width="70dp"
            android:layout_height="100dp" />

        <ImageView
            android:id="@+id/dealerCard4"
            android:layout_width="70dp"
            android:layout_height="100dp" />

        <ImageView
            android:id="@+id/dealerCard5"
            android:layout_width="70dp"
            android:layout_height="100dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/dealerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="Score: 0"
        android:textColor="#000000"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dealer" />

    <!-- Player -->

    <LinearLayout
        android:id="@+id/player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttons"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/playerCard1"
            android:layout_width="70dp"
            android:layout_height="100dp" />

        <ImageView
            android:id="@+id/playerCard2"
            android:layout_width="70dp"
            android:layout_height="100dp" />

        <ImageView
            android:id="@+id/playerCard3"
            android:layout_width="70dp"
            android:layout_height="100dp" />

        <ImageView
            android:id="@+id/playerCard4"
            android:layout_width="70dp"
            android:layout_height="100dp" />

        <ImageView
            android:id="@+id/playerCard5"
            android:layout_width="70dp"
            android:layout_height="100dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/playerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="Score: 0"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/player"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <!-- buttons -->
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone">



        <Button
            android:id="@+id/buttonHit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonHit"
            android:textSize="25dp" />

        <Button
            android:id="@+id/buttonPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonPass"
            android:textSize="25dp" />

        <Button
            android:id="@+id/buttonDouble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonDouble"
            android:textSize="25dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text=""
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/playerScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Deal" />

    <Button
        android:id="@+id/Deal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:text="@string/buttonDeal"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dealerScore" />

    <LinearLayout
        android:id="@+id/betting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/playerScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/bet"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="120dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/placeYourBet"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/playerScore"
            app:layout_constraintEnd_toStartOf="@+id/buttonBet"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonBet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/buttonBet"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/playerScore"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/betTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/playerScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>